k8s/istio-rules-headers.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: news-importer-api
  namespace: default
spec:
  hosts:
    - news-importer-api.default.svc.cluster.local
    - "*"
  gateways:
    - ingress-gateway-configuration
  http:
    - match:
        - headers:
            x-version:
              exact: 1.0.0
      route: # THEN
        - destination:
            host: news-importer-api.default.svc.cluster.local
            subset: 1.0.0
          weight: 100
    - match:
        - headers:
            x-version:
              exact: PR-1
      route: # THEN
        - destination:
            host: news-importer-api.default.svc.cluster.local
            subset: PR-1
          weight: 100
    - route:
        - destination:
            host: news-importer-api.default.svc.cluster.local
            subset: 1.0.0
          weight: 90
        - destination:
            host: news-importer-api.default.svc.cluster.local
            subset: PR-1
          weight: 10
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: news-importer-api
  namespace: default
spec:
  host: news-importer-api.default.svc.cluster.local
  subsets:
    - labels:
        version: 1.0.0
      name: 1.0.0
    - labels:
        version: PR-1
      name: PR-1
